dev/veidemann/veidemann-health-check-api/health_check_api_ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: veidemann-health-check-api
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/health`)
      kind: Rule
      services:
        - name: veidemann-health-check-api
          port: 80
  tls: {}
